log
Thu 04 May 2023 02:58:56 AM UTC: 
 tests:  0|5
total_score: 0/70
462fb6e
Thu 04 May 2023 03:40:48 AM UTC: 
 sudoku.c | 30 +++++++++++++++++++-----------
 1 file changed, 19 insertions(+), 11 deletions(-)
 tests:  0|5
total_score: 0/70
e93824b
Thu 04 May 2023 03:56:42 AM UTC: 
 sudoku.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:27: error: multi-character character constant [-Werror=multichar]
   68 |       if(n->sudo[i][k] == '/0')
      |                           ^~~~
sudoku.c:72:21: error: assignment to expression with array type
   72 |         adj_n->sudo = n->sudo;
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
89f01c5
Thu 04 May 2023 03:57:02 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:21: error: assignment to expression with array type
   72 |         adj_n->sudo = n->sudo;
      |                     ^
Compilation failed
4e73efb
Thu 04 May 2023 03:57:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:27: error: ‘move’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   73 |         adj_n->sudo[i][k] = move;
      |         ~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f5f0991
Thu 04 May 2023 04:01:50 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:21: error: assignment to expression with array type
   73 |         adj_n->sudo = copy(n);
      |                     ^
Compilation failed
af46dd5
Thu 04 May 2023 04:03:52 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:29: error: passing argument 1 of ‘copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   72 |         adj_n->sudo = copy(n->sudo);
      |                            ~^~~~~~
      |                             |
      |                             int (*)[9]
sudoku.c:16:18: note: expected ‘Node *’ but argument is of type ‘int (*)[9]’
   16 | Node* copy(Node* n)
      |            ~~~~~~^
sudoku.c:72:21: error: assignment to expression with array type
   72 |         adj_n->sudo = copy(n->sudo);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
aa5d9b3
Thu 04 May 2023 04:05:33 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:31: error: passing argument 1 of ‘copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   73 |           adj_n->sudo = copy(n->sudo);
      |                              ~^~~~~~
      |                               |
      |                               int (*)[9]
sudoku.c:16:18: note: expected ‘Node *’ but argument is of type ‘int (*)[9]’
   16 | Node* copy(Node* n)
      |            ~~~~~~^
sudoku.c:73:23: error: assignment to expression with array type
   73 |           adj_n->sudo = copy(n->sudo);
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
86dc1be
Thu 04 May 2023 04:06:30 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:23: error: assignment to expression with array type
   73 |           adj_n->sudo = copy(n);
      |                       ^
Compilation failed
c4b876c
Thu 04 May 2023 04:06:51 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
51835d5
Thu 04 May 2023 04:07:06 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b7f24be
Thu 04 May 2023 01:00:34 PM UTC: 
 sudoku.c | 20 +++++---------------
 1 file changed, 5 insertions(+), 15 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:25: error: expected ‘;’ before ‘}’ token
   67 |     pushBack(list, adjN)
      |                         ^
      |                         ;
   68 |   }
      |   ~                      
Compilation failed
34e61db
